# loupe

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  result
docs/superpowers/plans/: 2026-03-19-richer-visibility.md  2026-03-22-codex-transcript-support.md
docs/superpowers/specs/: 2026-03-19-richer-visibility-design.md  2026-03-22-codex-transcript-support-design.md
src/: app.rs  codex_parser.rs  events.rs  lib.rs  main.rs  parser.rs  run.rs  streaming.rs  watcher.rs
src/ui/: help.rs  highlight.rs  markdown.rs  mod.rs  raw_view.rs  run_list.rs  run_summary.rs  search.rs  status_bar.rs  tools_view.rs  transcript.rs
tests/: parser_integration_test.rs  watcher_test.rs
tests/fixtures/: codex_session.jsonl  minimal_session.jsonl
